# tensor-compiler

./: .gitignore  Dockerfile  README.md
src/: CMakeLists.txt  driver.cpp  driverbu.md
src/include/dlc/: Dialect.h  MLIRGen.h  ModelInfo.h  OnnxDumping.h  Ops.td  Parser.h  Passes.h
src/mlir/: Dialect.cpp  LowerToLLVM.cpp  LowerToMemref.cpp  LowerToTensor.cpp  MLIRGen.cpp  TilingPass.cpp
src/models/: add_const_init.py  add_constant.py  add_constant_1.py  add_matmul.py  add_relu.py  fused_model.py  matmul_2x2.py  matmul_3x3.py  matmul_512.onnx  matmul_dim.py  matmul_models.py  onnx_to_prototxt.py  test_matmul_models.py  test_model.py
src/models/onnx_files/: add_const_init.onnx  add_constant.onnx  add_constant_1.onnx  add_matmul.onnx  add_relu.onnx  fused_matmul_1024.onnx  fused_matmul_2048.onnx  fused_matmul_4096.onnx  fused_matmul_512.onnx  matmul_1024.onnx  matmul_2048.onnx  matmul_2x2.onnx  matmul_3x3.onnx  matmul_4096.onnx  matmul_512.onnx  test_10x10.onnx  test_2x1.onnx  test_2x2.onnx  test_3x2.onnx
src/models/proto_files/: add_const_init.prototxt  add_constant.prototxt  add_constant_1.prototxt  add_matmul.prototxt  add_relu.prototxt  matmul_2x2.prototxt  mnist.prototxt  test_10x10.onnx  test_2x1.onnx  test_2x2.onnx  test_3x2.onnx
src/parser/: OnnxDumping.cpp  Parser.cpp
src/tests/: .lit_test_times.txt  add_execution_test.mlir  lit.cfg.py  tensor_variations.mlir
src/tests/Conversion/: dlc-to-memref.mlir  tensor_variations.mlir
src/tests/Conversion/Output/: dlc-to-memref.mlir.script  dlc-to-tensor.mlir.script
src/tests/Correctness/: naive_llvm.ll  naive_mlir-llvm.mlir  naive_mlir-memref.mlir  naive_mlir-tensor.mlir  output_jit.mlir  output_llvm.ll  output_mlir-llvm.mlir  output_mlir-memref.mlir  output_mlir-tensor.mlir  output_mlir.mlir  summary_naive_2048_64.txt  summary_tiled_2048_64.txt  summary_transposed_2048_64.txt  tiled_fused_transposed_llvm.ll  tiled_fused_transposed_mlir-llvm.mlir  tiled_fused_transposed_mlir-memref.mlir  tiled_fused_transposed_mlir-tensor.mlir  tiled_fused_transposed_mlir.mlir  tiled_transposed_llvm.ll  tiled_transposed_mlir-llvm.mlir  tiled_transposed_mlir-memref.mlir  tiled_transposed_mlir-tensor.mlir  transposed_llvm.ll  transposed_mlir-llvm.mlir  transposed_mlir-memref.mlir  transposed_mlir-tensor.mlir  transposed_mlir.mlir  verify_fused_matmul.py  verify_matmul.py  verify_tiled_matmul.py
src/tests/Correctness/Output/: verify_fused_matmul.py.script  verify_matmul.py.script
src/tests/Execution/: add_execution.mlir  relu_execution.mlir  verify_add.mlir  verify_add.py  verify_relu.py
src/tests/Execution/Output/: add_execution.mlir.script  relu_execution.mlir.script
src/tests/Output/: add_execution_test.mlir.script  memref_test.mlir.script  tensor_test.mlir.script  tensor_variations.mlir.script
src/tests/error-handling/: test_const_error.mlir  test_error.mlir
src/tests/num_reg_test/: temp.mlir  verify_add.mlir  verify_add.py  verify_relu.py
src/tests/num_reg_test/Output/: temp.mlir.script  verify_add.py.script  verify_relu.py.script
src/tests/verifier_test/: test_const_error.mlir  test_error.mlir
src/tests/verifier_test/Output/: test_const_error.mlir.script  test_error.mlir.script
